# Projeck-Autofarhen

./: .gitignore  README.md  SETUP_FOR_LI.md
docs/: INTERFACE.md  TUNING_GUIDE.md
src/control_pkg/: CMakeLists.txt  CMakeLists.txt.backup  package.xml
src/control_pkg/control_part/: control_part.sln  control_part.vcxproj  control_part.vcxproj.filters  laengsfuehrug.cpp  laengsfuehrug_utf8.cpp
src/control_pkg/src/: controller_node.cpp
src/rusty_racer_control/: CMakeLists.txt  package.xml
src/rusty_racer_control/include/rusty_racer_control/: common.h  laengsfuehrung_controller.h
src/rusty_racer_control/src/: control_node.cpp
src/rusty_racer_interfaces/: CMakeLists.txt  package.xml
src/rusty_racer_interfaces/msg/: LaneDeviation.msg  MotorCommand.msg
